hphp/test/zend/bad/ext/reflection/tests/bug41061.php
<?php

function foo() {
}
 
class bar {
    private function foo() {
    }
}

Reflection::export(new ReflectionFunction('foo'));
Reflection::export(new ReflectionMethod('bar', 'foo'));
?>
===DONE===
<?php exit(0); ?>
